added some features

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
                 <select id="name-selector">
                     <option value="">Select your name</option>
                 </select>
+                <input type="password" id="password-input" placeholder="Enter your password" />
                 <button id="login-btn">Let’s Go! 🎉</button>
             </div>
             <div id="wheel-screen" class="hidden">
                 <h2>🎁 Spin the Wheel! 🎁</h2>
-                <div id="wheel"></div>
+                <div id="wheel-container">
+                    <div id="wheel"></div>
+                </div>
                 <button id="spin-btn">Spin the Wheel! 🎡</button>
             </div>
             <div id="result-screen" class="hidden">
